[gd_scene load_steps=2 format=3 uid="uid://xg3gmi7n1ofp"]

[ext_resource type="Script" path="res://main.gd" id="1_k5ume"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 500.0
grow_vertical = 2
script = ExtResource("1_k5ume")

[node name="PlayerPosition" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 13.0
offset_top = 12.0
offset_right = 53.0
offset_bottom = 35.0

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 594.0
offset_top = 15.0
offset_right = 646.0
offset_bottom = 41.0
text = "Score: "

[node name="ScoreValue" type="Label" parent="."]
layout_mode = 0
offset_left = 654.0
offset_top = 16.0
offset_right = 706.0
offset_bottom = 42.0
text = "0"

[node name="Fade" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -13.0
offset_top = -9.0
offset_right = 508.0
offset_bottom = 533.0
color = Color(0, 0, 0, 0.478431)

[node name="GameOverScreen" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 190.0
offset_top = 235.0
offset_right = -102.0
offset_bottom = -127.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
fit_content = true
